--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Pedro Marques</h1>
+<h1>Pedro Ramalho Marques</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
