--- a/index.html
+++ b/index.html
@@ -1,7 +1,86 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Pedro Ramalho Marques</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<nav>
+    <a href="/" class="logo">Pedro Marques</a>
+    <ul class="nav-links">
+      <li><a href="#inicio">Início</a></li>
+      <li><a href="#sobre">Sobre</a></li>
+      <li><a href="#experiencia">Experiência</a></li>
+      <li><a href="#projetos">Projetos</a></li>
+      <li><a href="#blog">Blog</a></li>
+      <li><a href="#portfolio">Portfólio</a></li>
+      <li><a href="#contato">Contato</a></li>
+      <li><a href="#curriculo">Currículo</a></li>
+    </ul>
+  </nav>
+</header>
+<div class="content">
+  <h1>Index</h1>
+  <p>Index</p>
+</div>
+<footer>
+  <div class="footer-content">
+    <div class="footer-column">
+      <h3>Sobre</h3>
+      <ul>
+        <li><a href="#sobre">Quem sou</a></li>
+        <li><a href="#experiencia">Experiência</a></li>
+        <li><a href="#curriculo">Currículo</a></li>
+        <li><a href="#portfolio">Portfólio</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h3>Redes Sociais</h3>
+      <ul class="social-links">
+        <li>
+          <a href="https://github.com/alexmsantos" target="_blank">
+            <i class="fab fa-github"></i>
+            GitHub
+          </a>
+        </li>
+        <li>
+          <a href="https://linkedin.com" target="_blank">
+            <i class="fab fa-linkedin"></i>
+            LinkedIn
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com" target="_blank">
+            <i class="fab fa-twitter"></i>
+            Twitter
+          </a>
+        </li>
+        <li>
+          <a href="https://instagram.com" target="_blank">
+            <i class="fab fa-instagram"></i>
+            Instagram
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h3>Contato</h3>
+      <ul>
+        <li>
+          <a href="mailto:contato@exemplo.com">
+            <i class="far fa-envelope"></i>
+            Email
+          </a>
+        </li>
+        <li>
+          <a href="#blog">
+            <i class="far fa-newspaper"></i>
+            Blog
+          </a>
+        </li>
+        <li>
+          <a href="#projetos">
+            <i class="fas fa-code"></i>
+            Projetos
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2025 Pedro Marques. Todos os direitos reservados.</p>
+  </div>
+</footer>
