--- a/experiencia.html
+++ b/experiencia.html
@@ -14,8 +14,8 @@
   </nav>
 </header>
 <div class="content">
-  <h1>Index</h1>
-  <p>Index</p>
+  <h1>Experiência</h1>
+  <p>Experiência</p>
 </div>
 
 <footer>
