--- a/sobre.html
+++ b/sobre.html
@@ -14,8 +14,8 @@
   </nav>
 </header>
 <div class="content">
-  <h1>Index</h1>
-  <p>Index</p>
+  <h1>Sobre</h1>
+  <p>Sobre</p>
 </div>
 
 <footer>
