--- a/sobre.html
+++ b/sobre.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head</head>
-<body>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/assets/main/main.css"/>
+<title>Página de teste</title>
+</head><body>
 
 <header>
   <nav>
