--- a/src/_header.html
+++ b/src/_header.html
@@ -1,1 +1,1 @@
-<header><nav><a href="/" class="logo">Pedro Marques</a><ul class="nav-links"><li><a href="/">Início</a></li><li><a href="/sobre.html">Sobre</a></li><li><a href="/experiencia.html">Experiência</a></li></ul></nav><button class="btn">teste</button> <button class="btn2">teste2</button></header>
+<header><nav><a href="/" class="logo">Mariana Campante</a><ul class="nav-links"><li><a href="/about.html">About</a></li><li><a href="/work.html">Work</a></li><li><a href="/">Resumé</a></li><li><a href="/">LinkedIn</a></li></ul></nav></header>
