--- a/src/_footer.html
+++ b/src/_footer.html
@@ -1,1 +1,1 @@
-<footer><div class="footer-content"><ul><li><a href="index.html">hello@mariana.pt</a></li><li><a href="#experiencia">LinkedIn</a></li><li><a href="#curriculo">Resumé</a></li></ul></div><div class="footer-bottom"><p>&copy; 2025, Mariana Campante</p></div></footer>
+<footer><div id="footer-content"><ul><li><a href="index.html">hello@mariana.pt</a></li><li><a href="#experiencia">LinkedIn</a></li><li><a href="#curriculo">Resumé</a></li></ul></div><div id="footer-copyright"><p>&copy; 2025, Mariana Campante</p></div></footer>
