--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/assets/css/main.css"/>
+<link rel="stylesheet" href="/assets/css/main.css"/>
+<script src="/assets/js/menu.js"></script>
 
 <title>Mariana Campante - Portfolio</title>
 </head><body>
@@ -16,9 +18,28 @@
       <li><a href="/about.html">About</a></li>
       <li><a href="/work.html">Work</a></li>
       <li><a href="/">Resumé</a></li>
-      <li><a href="/">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/mariana-campante/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
     </ul>
+
+    <div id="menu-button">
+      <svg width="32px" height="32px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <g>
+          <line x1="0" y1="17" x2="48" y2="17" stroke-width="2" />
+          <line x1="0" y1="31" x2="48" y2="31" stroke-width="2" />
+        </g>
+      </svg>
+    </div>
   </nav>
+
+<nav id="menu">
+  <ul>
+    <li>Lorem</li>
+    <li>Lorem</li>
+    <li>Lorem</li>
+    <li>Lorem</li>
+    <li>Lorem</li>
+  </ul>
+</nav>
 </header>
 <main>
 
