--- a/about.html
+++ b/about.html
@@ -4,14 +4,18 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="/src/assets/scripts/menu.js"></script>
+<script src="/src/assets/scripts/headerscroll.js"></script>
+<script src="/src/assets/scripts/fade.js"></script>
 <link rel="stylesheet" href="/assets/css/main.css"/>
 <link rel="stylesheet" href="/assets/css/main.css"/>
-<script src="/assets/js/menu.js"></script>
+
 
 <title>Mariana Campante - Portfolio</title>
+
 </head><body>
 
-<header>
+<header id="main-header">
   <nav>
     <a href="/" class="logo">Mariana Campante</a>
     <ul class="nav-links">
@@ -21,25 +25,13 @@
       <li><a href="https://www.linkedin.com/in/mariana-campante/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
     </ul>
 
-    <div id="menu-button">
-      <svg width="32px" height="32px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <g>
-          <line x1="0" y1="17" x2="48" y2="17" stroke-width="2" />
-          <line x1="0" y1="31" x2="48" y2="31" stroke-width="2" />
-        </g>
-      </svg>
+    <div id="hamburguer-container" onclick="myFunction(this)">
+      <div class="bar1"></div>
+      <div class="invis"></div>
+      <div class="bar3"></div>
     </div>
   </nav>
 
-<nav id="menu">
-  <ul>
-    <li>Lorem</li>
-    <li>Lorem</li>
-    <li>Lorem</li>
-    <li>Lorem</li>
-    <li>Lorem</li>
-  </ul>
-</nav>
 </header>
 <main>
 
@@ -93,18 +85,18 @@
 <footer>
     <div id="footer-content">
         <ul>
-          <li><a href="index.html">hello@mariana.pt  
-<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <mask id="mask0_147_1168" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
-    <rect width="24" height="24" fill="#D9D9D9"/>
-  </mask>
-  <g mask="url(#mask0_147_1168)">
-    <path d="M5.52232 24C5.09691 24 4.73684 23.8483 4.44211 23.545C4.14737 23.2417 4 22.8711 4 22.4333V12.5667C4 12.1289 4.14737 11.7583 4.44211 11.455C4.73684 11.1517 5.09691 11 5.52232 11H18.4777C18.9031 11 19.2632 11.1517 19.5579 11.455C19.8526 11.7583 20 12.1289 20 12.5667V22.4333C20 22.8711 19.8526 23.2417 19.5579 23.545C19.2632 23.8483 18.9031 24 18.4777 24H5.52232ZM12 17.9834L5.26316 13.55V22.4333C5.26316 22.5111 5.28744 22.5751 5.336 22.625C5.38456 22.675 5.44667 22.7 5.52232 22.7H18.4777C18.5533 22.7 18.6154 22.675 18.664 22.625C18.7126 22.5751 18.7368 22.5111 18.7368 22.4333V13.55L12 17.9834ZM12 16.6333L18.6074 12.3H5.39263L12 16.6333ZM5.26316 13.55V12.3V22.4333C5.26316 22.5111 5.28744 22.5751 5.336 22.625C5.38456 22.675 5.44667 22.7 5.52232 22.7H5.26316V13.55Z" fill="#1C1B1F"/>
-  </g>
-</svg>
+          <li class="fade-in"><a href="index.html">hello@mariana.pt  
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                  <mask id="mask0_147_1168" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
+                    <rect width="24" height="24" fill="#D9D9D9"/>
+                  </mask>
+                  <g mask="url(#mask0_147_1168)">
+                    <path d="M5.52232 24C5.09691 24 4.73684 23.8483 4.44211 23.545C4.14737 23.2417 4 22.8711 4 22.4333V12.5667C4 12.1289 4.14737 11.7583 4.44211 11.455C4.73684 11.1517 5.09691 11 5.52232 11H18.4777C18.9031 11 19.2632 11.1517 19.5579 11.455C19.8526 11.7583 20 12.1289 20 12.5667V22.4333C20 22.8711 19.8526 23.2417 19.5579 23.545C19.2632 23.8483 18.9031 24 18.4777 24H5.52232ZM12 17.9834L5.26316 13.55V22.4333C5.26316 22.5111 5.28744 22.5751 5.336 22.625C5.38456 22.675 5.44667 22.7 5.52232 22.7H18.4777C18.5533 22.7 18.6154 22.675 18.664 22.625C18.7126 22.5751 18.7368 22.5111 18.7368 22.4333V13.55L12 17.9834ZM12 16.6333L18.6074 12.3H5.39263L12 16.6333ZM5.26316 13.55V12.3V22.4333C5.26316 22.5111 5.28744 22.5751 5.336 22.625C5.38456 22.675 5.44667 22.7 5.52232 22.7H5.26316V13.55Z" fill="#1C1B1F"/>
+                  </g>
+                </svg>
         </a></li>
             
-          <li><a href="#experiencia">LinkedIn 
+          <li class="fade-in"><a href="#experiencia">LinkedIn 
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                   <mask id="mask0_147_1165" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
                     <rect x="24" width="24" height="24" transform="rotate(90 24 0)" fill="#D9D9D9"/>
@@ -115,7 +107,7 @@
                 </svg>
               </a></li>
 
-          <li><a href="#curriculo">Resumé 
+          <li class="fade-in"><a href="#curriculo">Resumé 
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                   <mask id="mask0_147_1165" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
                     <rect x="24" width="24" height="24" transform="rotate(90 24 0)" fill="#D9D9D9"/>
@@ -127,7 +119,7 @@
               </a></li>
         </ul>
     </div>
-    <div id="footer-copyright">
+    <div id="footer-copyright" class="fade-in">
       <p>&copy; 2025, Mariana Campante</p>
     </div>
 </footer>
