Creates case study template

--- a/cs-dive.html
+++ b/cs-dive.html
@@ -34,48 +34,55 @@
 </header>
 <main>
 
-  <section id="about-section">
+  <section class="caseStudy-section">
       <div class="section-header">
-          <h2 class="fade-in">About me</h2>
+          <h2 class="fade-in">ChatGPT Dive</h2>
       </div>
 
-      <div id="about-content">
+      <div class="caseStudy-overview">
 
-        <div id="about-text" class="fade-in">
+        <div class="caseStudy-overview-details">
+            <div class="caseStudy-overview-text fade-in">
+                <p>A creative problem solver specializing in visual, motion and interaction design with experience designing for TV, web, mobile and tablet. Currently designing the future of live TV and streaming at Comcast.</p>
+            </div>
 
-        <p>Hi, I’m Mariana! ⭐️ A Digital Product Designer based in Lisbon, exploring the intersection of people, systems, and design. With a background in Communication Design, I approach problems through a critical and socially engaged lens. I’m drawn to environments where dialogue, collaboration, and open critique push ideas further.</p>
-
-        <p>Naturally introspective and observant, I listen closely. This quiet attention helps me surface deeper insights and navigate ambiguity with care. I’m driven by curiosity and imagination, often connecting ideas across disciplines. I design with heart as much as with logic. Empathy is a constant guide in my process, leading me toward accessible, inclusive, and user-centered outcomes. At the same time, I remain adaptable and open to change, trusting the process of exploration and iteration to uncover the right direction.</p>
-
+            <div class="caseStudy-overview-info" class="fade-in">
+                <div class="caseStudy-overview-infoline">
+                    <span class="caseStudy-overview-infobit fade-in">Date</span>
+                    <span class="caseStudy-overview-infobit fade-in">January 2025</span>
+                </div>
+                <div class="caseStudy-overview-infoline">
+                    <span class="caseStudy-overview-infobit fade-in">Deadline</span>
+                    <span class="caseStudy-overview-infobit fade-in">5 weeks</span>
+                </div>
+                <div class="caseStudy-overview-infoline">
+                    <span class="caseStudy-overview-infobit fade-in">Team</span>
+                    <span class="caseStudy-overview-infobit fade-in">4 members</span>
+                </div>
+                <div class="caseStudy-overview-infoline infolineLast">
+                    <span class="caseStudy-overview-infobit fade-in">Scope</span>
+                    <span class="caseStudy-overview-infobit fade-in">Product Design</span>
+                </div>
+            </div>
         </div>
 
-        <div id="about-links" class="fade-in">
+        <div class="CaseStudy-overview-aside">
+
+            <div class="caseStudy-overview-title" class="fade-in">
+                <h3>Overview</h3>
+            </div>
+
+            <div class="caseStudy-overview-links" class="fade-in">
                 <button class="primary-button fade-in">
                     <a href="mailto:hello@mariana.pt>
-                        <span class="button-text">Download CV</span>
+                        <span class="button-text">View on Behance</span>
                     </a>
-                  </button>
-
-              <button class="primary-button fade-in">
-                  <a href="mailto:hello@mariana.pt>
-                      <span class="button-text">LinkedIn</span>
-                  </a>
                 </button>
-
-              <button class="primary-button fade-in">
-                  <a href="mailto:hello@mariana.pt>
-                      <span class="button-text">hello@mariana.pt</span>
-                  </a>
-              </button>
+            </div>
+        
         </div>
 
       </div>
-
-      <figure id="about-picture" class="fade-in">
-          <img src="/src/assets/img/MarianaProfile.webp" alt="Mariana's Profile Picture">
-      </figure>
-
-      </ul>
 
   </section>
 
