--- a/work.html
+++ b/work.html
@@ -8,7 +8,6 @@
 <script src="/src/assets/scripts/headerscroll.js"></script>
 <script src="/src/assets/scripts/fade.js"></script>
 <link rel="stylesheet" href="/assets/css/main.css"/>
-<link rel="stylesheet" href="/assets/css/main.css"/>
 
 
 <title>Mariana Campante - Portfolio</title>
@@ -22,7 +21,7 @@
       <li><a href="/about.html">About</a></li>
       <li><a href="/work.html">Work</a></li>
       <li><a href="/">Resumé</a></li>
-      <li><a href="https://www.linkedin.com/in/mariana-campante/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/mariana-campante-/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
     </ul>
 
     <div id="hamburguer-container" onclick="myFunction(this)">
@@ -42,57 +41,63 @@
 
       <ul>
           <li>
-              <div class="project-thumbnail">
-                  <figure>
-                      <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
-                  </figure>
-                  <div class="project-details">
-                      <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
-                      <p>A brief description of Project 1, highlighting its key features and design approach.</p>
-                      <div class="project-tags">
-                          <span class="tag">Product Design</span> /
-                          <span class="tag">UX Research</span> /
-                          <span class="tag">Motion Design</span>
-                      </div>
-                      <a href="/projects/1" class="project-button">View Case Study</a>
-                  </div>
-              </div>
-          </li>
-
-          <li>
-              <div class="project-thumbnail">
-                  <figure>
-                      <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
-                  </figure>
-                  <div class="project-details">
-                      <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
-                      <p>A brief description of Project 1, highlighting its key features and design approach.</p>
-                      <div class="project-tags">
-                          <span class="tag">Product Design</span> /
-                          <span class="tag">UX Research</span> /
-                          <span class="tag">Motion Design</span>
-                      </div>
-                      <a href="/projects/1" class="project-button">View Case Study</a>
-                  </div>
-              </div>
-          </li>
-
-          <li>
-            <div class="project-thumbnail">
-                <figure>
-                    <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
-                </figure>
-                <div class="project-details">
-                    <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
-                    <p>A brief description of Project 1, highlighting its key features and design approach.</p>
-                    <div class="project-tags">
-                        <span class="tag">Product Design</span> /
-                        <span class="tag">UX Research</span> /
-                        <span class="tag">Motion Design</span>
+            <a href="/cs-dive.html" class="project-button">
+                <div class="project-thumbnail fade-in">
+                    <figure>
+                        <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
+                    </figure>
+                    <div class="project-details">
+                        <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
+                        <p>A brief description of Project 1, highlighting its key features and design approach.</p>
+                        <div class="project-tags">
+                            <span class="tag">Product Design</span> /
+                            <span class="tag">UX Research</span> /
+                            <span class="tag">Motion Design</span>
+                        </div>
+                        <a href="/cs-dive.html" class="project-button">View Case Study</a>
                     </div>
-                    <a href="/projects/1" class="project-button">View Case Study</a>
                 </div>
-            </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="/cs-dive.html" class="project-button">
+                <div class="project-thumbnail fade-in">
+                    <figure>
+                        <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
+                    </figure>
+                    <div class="project-details">
+                        <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
+                        <p>A brief description of Project 1, highlighting its key features and design approach.</p>
+                        <div class="project-tags">
+                            <span class="tag">Product Design</span> /
+                            <span class="tag">UX Research</span> /
+                            <span class="tag">Motion Design</span>
+                        </div>
+                        <a href="/cs-dive.html" class="project-button">View Case Study</a>
+                    </div>
+                </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="/cs-dive.html" class="project-button">
+                <div class="project-thumbnail fade-in">
+                    <figure>
+                        <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
+                    </figure>
+                    <div class="project-details">
+                        <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
+                        <p>A brief description of Project 1, highlighting its key features and design approach.</p>
+                        <div class="project-tags">
+                            <span class="tag">Product Design</span> /
+                            <span class="tag">UX Research</span> /
+                            <span class="tag">Motion Design</span>
+                        </div>
+                        <a href="/cs-dive.html" class="project-button">View Case Study</a>
+                    </div>
+                </div>
+            </a>
         </li>
 
       </ul>
