Updated Case Study card

--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
 
       <ul>
           <li>
-            <a href="/cs-dive.html" class="project-button">
+            <a href="/cs-dive.html">
                 <div class="project-thumbnail fade-in">
                     <figure>
                         <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
@@ -61,7 +61,7 @@
           </li>
 
           <li>
-            <a href="/cs-dive.html" class="project-button">
+            <a href="/cs-dive.html">
                 <div class="project-thumbnail fade-in">
                     <figure>
                         <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
@@ -81,7 +81,7 @@
           </li>
 
           <li>
-            <a href="/cs-dive.html" class="project-button">
+            <a href="/cs-dive.html">
                 <div class="project-thumbnail fade-in">
                     <figure>
                         <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
