Updated Case study cards

--- a/about.html
+++ b/about.html
@@ -32,6 +32,21 @@
   </nav>
 
 </header>
+
+<nav id="mobile-menu">
+  <div class="menu-header">
+    <span>Mariana Campante</span>
+  </div>
+  <ul>
+    <li><a href="#">Home →</a></li>
+    <li><a href="#">Work →</a></li>
+    <li><a href="#">About →</a></li>
+    <li><a href="#" target="_blank">LinkedIn ↗</a></li>
+    <li><a href="#" target="_blank">Resumé ↗</a></li>
+  </ul>
+</nav>
+
+<div id="overlay"></div>
 <main>
 
   <section id="about-section">
