--- a/cs-dive.html
+++ b/cs-dive.html
@@ -32,6 +32,21 @@
   </nav>
 
 </header>
+
+<nav id="mobile-menu">
+  <div class="menu-header">
+    <span>Mariana Campante</span>
+  </div>
+  <ul>
+    <li><a href="#">Home →</a></li>
+    <li><a href="#">Work →</a></li>
+    <li><a href="#">About →</a></li>
+    <li><a href="#" target="_blank">LinkedIn ↗</a></li>
+    <li><a href="#" target="_blank">Resumé ↗</a></li>
+  </ul>
+</nav>
+
+<div id="overlay"></div>
 <main>
 
   <section class="caseStudy-section">
@@ -43,25 +58,25 @@
 
         <div class="caseStudy-overview-details">
             <div class="caseStudy-overview-text fade-in">
-                <p>A creative problem solver specializing in visual, motion and interaction design with experience designing for TV, web, mobile and tablet. Currently designing the future of live TV and streaming at Comcast.</p>
+                <p>Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning.</p>
             </div>
 
-            <div class="caseStudy-overview-info" class="fade-in">
+            <div class="caseStudy-overview-info fade-in">
                 <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit fade-in">Date</span>
-                    <span class="caseStudy-overview-infobit fade-in">January 2025</span>
+                    <span class="caseStudy-overview-infobit">Date</span>
+                    <span class="caseStudy-overview-infobit">January 2025</span>
                 </div>
                 <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit fade-in">Deadline</span>
-                    <span class="caseStudy-overview-infobit fade-in">5 weeks</span>
+                    <span class="caseStudy-overview-infobit">Deadline</span>
+                    <span class="caseStudy-overview-infobit">5 weeks</span>
                 </div>
                 <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit fade-in">Team</span>
-                    <span class="caseStudy-overview-infobit fade-in">4 members</span>
+                    <span class="caseStudy-overview-infobit">Team</span>
+                    <span class="caseStudy-overview-infobit">4 members</span>
                 </div>
                 <div class="caseStudy-overview-infoline infolineLast">
-                    <span class="caseStudy-overview-infobit fade-in">Scope</span>
-                    <span class="caseStudy-overview-infobit fade-in">Product Design</span>
+                    <span class="caseStudy-overview-infobit">Scope</span>
+                    <span class="caseStudy-overview-infobit">Product Design</span>
                 </div>
             </div>
         </div>
@@ -74,7 +89,7 @@
 
             <div class="caseStudy-overview-links" class="fade-in">
                 <button class="primary-button fade-in">
-                    <a href="mailto:hello@mariana.pt>
+                    <a href="https://www.behance.net/gallery/224514541/Designing-a-new-feature-ChatGPT-Dive">
                         <span class="button-text">View on Behance</span>
                     </a>
                 </button>
