Updated Work page

--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
               </a></li>
         </ul>
     </div>
-    <div id="footer-copyright" class="fade-in">
+    <div id="footer-copyright">
       <p>&copy; 2025, Mariana Campante</p>
     </div>
 </footer>
