--- a/cs-dive.html
+++ b/cs-dive.html
@@ -140,7 +140,7 @@
               </a></li>
         </ul>
     </div>
-    <div id="footer-copyright" class="fade-in">
+    <div id="footer-copyright">
       <p>&copy; 2025, Mariana Campante</p>
     </div>
 </footer>
