--- a/work.html
+++ b/work.html
@@ -79,10 +79,10 @@
             <a href="/cs-dive.html">
                 <div class="project-thumbnail fade-in">
                     <figure>
-                        <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
+                        <img src="/src/assets/img/WiseBagsProject.webp" alt="Project Thumbnail 1">
                     </figure>
                     <div class="project-details">
-                        <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
+                        <h3>Transforming the overwhelming pressure of planning a nomadic life</h3>
                         <p>A brief description of Project 1, highlighting its key features and design approach.</p>
                         <div class="project-tags">
                             <span class="tag">Product Design</span> /
@@ -99,10 +99,10 @@
             <a href="/cs-dive.html">
                 <div class="project-thumbnail fade-in">
                     <figure>
-                        <img src="/src/assets/img/ChatGPTDiveProject.webp" alt="Project Thumbnail 1">
+                        <img src="/src/assets/img/RedesignFbaulWebsiteProject.webp" alt="Project Thumbnail 1">
                     </figure>
                     <div class="project-details">
-                        <h3>Helping ChatGPT users navigate ideas and deepen reasoning</h3>
+                        <h3>Redesigning FBAULs website</h3>
                         <p>A brief description of Project 1, highlighting its key features and design approach.</p>
                         <div class="project-tags">
                             <span class="tag">Product Design</span> /
@@ -158,7 +158,7 @@
               </a></li>
         </ul>
     </div>
-    <div id="footer-copyright" class="fade-in">
+    <div id="footer-copyright">
       <p>&copy; 2025, Mariana Campante</p>
     </div>
 </footer>
