--- a/about.html
+++ b/about.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="/src/assets/scripts/menu.js"></script>
-<script src="/src/assets/scripts/headerscroll.js"></script>
-<script src="/src/assets/scripts/fade.js"></script>
-<link rel="stylesheet" href="/assets/css/main.css"/>
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>Mariana Campante - Portfolio</title>
+    <link rel="icon" href="assets/favicon/favicon.webp" type="image/x-icon">
 
-<title>Mariana Campante - Portfolio</title>
+    <script src="/src/assets/scripts/menu.js"></script>
+    <script src="/src/assets/scripts/headerscroll.js"></script>
+    <script src="/src/assets/scripts/fade.js"></script>
+
+    <link rel="stylesheet" href="/assets/css/main.css"/>
 
 </head><body>
 
 <header id="main-header">
   <nav>
-    <a href="/" class="logo">Mariana Campante</a>
+    <a href="/index.html" class="logo">Mariana Campante</a>
     <ul class="nav-links">
       <li><a href="/about.html">About</a></li>
       <li><a href="/work.html">Work</a></li>
@@ -31,22 +34,23 @@
     </div>
   </nav>
 
+  <div class="overlay" id="overlay">
+    <nav class="overlay-content">
+      <ul>
+        <ul>
+          <li><a href="#">Home →</a></li>
+          <li><a href="#">Work →</a></li>
+          <li><a href="#">About →</a></li>
+          <li><a href="#" target="_blank">LinkedIn ↗</a></li>
+          <li><a href="#" target="_blank">Resumé ↗</a></li>
+        </ul>
+      </ul>
+    </nav>
+  </div>
+
 </header>
 
-<nav id="mobile-menu">
-  <div class="menu-header">
-    <span>Mariana Campante</span>
-  </div>
-  <ul>
-    <li><a href="#">Home →</a></li>
-    <li><a href="#">Work →</a></li>
-    <li><a href="#">About →</a></li>
-    <li><a href="#" target="_blank">LinkedIn ↗</a></li>
-    <li><a href="#" target="_blank">Resumé ↗</a></li>
-  </ul>
-</nav>
 
-<div id="overlay"></div>
 <main>
 
   <section id="about-section">
