--- a/work.html
+++ b/work.html
@@ -15,6 +15,12 @@
 
     <link rel="stylesheet" href="/assets/css/main.css"/>
 
+    <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Book.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Light.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Thin.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/Tobias/TobiasTRIAL-ThinItalic.woff" as="font" type="font/woff2" crossorigin>
+
 </head><body>
 
 <header id="main-header">
