--- a/cs-dive.html
+++ b/cs-dive.html
@@ -9,9 +9,10 @@
     <title>Mariana Campante - Portfolio</title>
     <link rel="icon" href="assets/favicon/favicon.webp" type="image/x-icon">
 
-    <script src="/src/assets/scripts/menu.js"></script>
-    <script src="/src/assets/scripts/headerscroll.js"></script>
-    <script src="/src/assets/scripts/fade.js"></script>
+    <script src="/src/assets/scripts/menu.js" defer></script>
+    <script src="/src/assets/scripts/headerscroll.js" defer></script>
+    <script src="/src/assets/scripts/fade.js" defer></script>
+    <script src="/src/assets/scripts/slideshow.js" defer></script>
 
     <link rel="stylesheet" href="/assets/css/main.css"/>
 
