--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <script src="/src/assets/scripts/headerscroll.js" defer></script>
     <script src="/src/assets/scripts/fade.js" defer></script>
     <script src="/src/assets/scripts/slideshow.js" defer></script>
+    <script src="/src/assets/scripts/back-to-top.js" defer></script>
 
     <link rel="stylesheet" href="/assets/css/main.css"/>
 
@@ -22,7 +23,8 @@
     <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Thin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/src/assets/fonts/Tobias/TobiasTRIAL-ThinItalic.woff" as="font" type="font/woff2" crossorigin>
 
-</head><body>
+</head>
+<body>
 
 <header id="main-header">
   <div class="container header-container">
@@ -35,7 +37,7 @@
         <ul>
           <li><a href="/about.html">About</a></li>
           <li><a href="/work.html">Work</a></li>
-          <li><a href="/">Resumé</a></li>
+          <li><a href="https://drive.google.com/file/d/1UTasIgQaMeSx0ivBkTLegyclxYIBIARD/view" target="_blank" rel="noopener noreferrer">Resumé</a></li>
           <li><a href="https://www.linkedin.com/in/mariana-campante-/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
         </ul>
       </div>
@@ -111,7 +113,7 @@
 
           <ul id="overlay-external-links">
             <li>
-              <a href="https://www.linkedin.com/in/mariana-campante-/">
+              <a href="https://www.linkedin.com/in/mariana-campante-/" target="_blank" rel="noopener noreferrer">
                 <div class="overlay-item">
                   <span>LinkedIn</span>
                   <span>
@@ -128,7 +130,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.behance.net/marianacampante">
+              <a href="https://drive.google.com/file/d/1UTasIgQaMeSx0ivBkTLegyclxYIBIARD/view" target="_blank" rel="noopener noreferrer">
                 <div class="overlay-item">
                   <span>Resumé</span>
                   <span>
@@ -145,9 +147,9 @@
               </a>
             </li>
             <li>
-              <a href="https://www.behance.net/marianacampante">
+              <a href="mailto:marianacampante@outlook.pt">
                 <div class="overlay-item">
-                  <span>hello@mariana.pt</span>
+                  <span>Email</span>
                   <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                       <mask id="mask0_147_1168" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
@@ -200,9 +202,9 @@
     
 
 
-<main>
+  <main>
 
-  <section id="about-section">
+    <section id="about-section">
       <div class="section-header">
         <div class="container section-header-container">
           <h2>About me</h2>
@@ -214,44 +216,52 @@
 
           <div id="about-text">
 
-          <p>Hi, I'm Mariana! ⭐️ A Digital Product Designer based in Lisbon, exploring the intersection of people, systems, and design. With a background in Communication Design, I approach problems through a critical and socially engaged lens. I’m drawn to environments where dialogue, collaboration, and open critique push ideas further.</p>
+            <p>Hi, I'm Mariana! ⭐️ A Digital Product Designer based in Lisbon, exploring the intersection of people,
+              systems, and design. With a background in Communication Design, I approach problems through a critical and
+              socially engaged lens. I'm drawn to environments where dialogue, collaboration, and open critique push
+              ideas further.</p>
 
-          <p>Naturally introspective and observant, I listen closely. This quiet attention helps me surface deeper insights and navigate ambiguity with care. I’m driven by curiosity and imagination, often connecting ideas across disciplines. I design with heart as much as with logic. Empathy is a constant guide in my process, leading me toward accessible, inclusive, and user-centered outcomes. At the same time, I remain adaptable and open to change, trusting the process of exploration and iteration to uncover the right direction.</p>
+            <p>Naturally introspective and observant, I listen closely. This quiet attention helps me surface deeper
+              insights and navigate ambiguity with care. I'm driven by curiosity and imagination, often connecting ideas
+              across disciplines. I design with heart as much as with logic. Empathy is a constant guide in my process,
+              leading me toward accessible, inclusive, and user-centered outcomes. At the same time, I remain adaptable
+              and open to change, trusting the process of exploration and iteration to uncover the right direction.</p>
 
           </div>
 
           <div id="about-links">
-                  <button class="primary-button">
-                      <a href="mailto:hello@mariana.pt>
-                          <span class="button-text">Download CV</span>
-                      </a>
-                    </button>
+            <button class="primary-button">
+              <a href="https://drive.google.com/file/d/1UTasIgQaMeSx0ivBkTLegyclxYIBIARD/view" target="_blank"
+                rel="noopener noreferrer">
+                <span class="button-text">Download CV</span>
+              </a>
+            </button>
 
-                <button class="primary-button">
-                    <a href="mailto:hello@mariana.pt>
-                        <span class="button-text">LinkedIn</span>
-                    </a>
-                  </button>
+            <button class="primary-button">
+              <a href="https://www.linkedin.com/in/mariana-campante-/" target="_blank" rel="noopener noreferrer">
+                <span class="button-text">LinkedIn</span>
+              </a>
+            </button>
 
-                <button class="primary-button">
-                    <a href="mailto:hello@mariana.pt>
-                        <span class="button-text">hello@mariana.pt</span>
-                    </a>
-                </button>
+            <button class="primary-button">
+              <a href="mailto:hmarianacampante@outlook.pt">
+                <span class="button-text">marianacampante@outlook.pt</span>
+              </a>
+            </button>
           </div>
 
         </div>
 
         <figure id="about-picture">
-            <img src="/src/assets/img/aboutMe/AboutMe.webp" alt="Mariana's Profile Picture">
+          <img src="/src/assets/img/aboutMe/AboutMe.webp" alt="Mariana's Profile Picture">
         </figure>
       </div>
 
       </ul>
 
-  </section>
+    </section>
 
-</main>
+  </main>
 
 <footer>
   <div class="container footer-container">
@@ -261,4 +271,5 @@
   </div>
 </footer>
 </body>
+
 </html>
