--- a/cs-fbaul.html
+++ b/cs-fbaul.html
@@ -13,6 +13,7 @@
     <script src="/src/assets/scripts/headerscroll.js" defer></script>
     <script src="/src/assets/scripts/fade.js" defer></script>
     <script src="/src/assets/scripts/slideshow.js" defer></script>
+    <script src="/src/assets/scripts/back-to-top.js" defer></script>
 
     <link rel="stylesheet" href="/assets/css/main.css"/>
 
@@ -36,7 +37,7 @@
         <ul>
           <li><a href="/about.html">About</a></li>
           <li><a href="/work.html">Work</a></li>
-          <li><a href="/">Resumé</a></li>
+          <li><a href="https://drive.google.com/file/d/1UTasIgQaMeSx0ivBkTLegyclxYIBIARD/view" target="_blank" rel="noopener noreferrer">Resumé</a></li>
           <li><a href="https://www.linkedin.com/in/mariana-campante-/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
         </ul>
       </div>
@@ -112,7 +113,7 @@
 
           <ul id="overlay-external-links">
             <li>
-              <a href="https://www.linkedin.com/in/mariana-campante-/">
+              <a href="https://www.linkedin.com/in/mariana-campante-/" target="_blank" rel="noopener noreferrer">
                 <div class="overlay-item">
                   <span>LinkedIn</span>
                   <span>
@@ -129,7 +130,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.behance.net/marianacampante">
+              <a href="https://drive.google.com/file/d/1UTasIgQaMeSx0ivBkTLegyclxYIBIARD/view" target="_blank" rel="noopener noreferrer">
                 <div class="overlay-item">
                   <span>Resumé</span>
                   <span>
@@ -146,9 +147,9 @@
               </a>
             </li>
             <li>
-              <a href="https://www.behance.net/marianacampante">
+              <a href="mailto:marianacampante@outlook.pt">
                 <div class="overlay-item">
-                  <span>hello@mariana.pt</span>
+                  <span>Email</span>
                   <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                       <mask id="mask0_147_1168" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
@@ -230,8 +231,7 @@
 
                 <div class="caseStudy-overview-details">
                     <div class="caseStudy-overview-text">
-                        <p>Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate
-                            ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning.</p>
+                        <p>Redesigned the Faculty of Fine Arts Website with a team of 4 designers, focusing on the applicant's experience, and the overall accessibility while visually reflecting its reputation as a leading institution in the Arts.</p>
                     </div>
 
                     <div class="caseStudy-overview-info">
@@ -290,6 +290,20 @@
         </section>
     </main>
 
+<div id="back-to-top-container">
+  <button onclick="topFunction()" id="back-to-top" title="Go to top">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+      <mask id="mask0_299_1168" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
+        <rect width="24" height="24" fill="#D9D9D9" />
+      </mask>
+      <g mask="url(#mask0_299_1168)">
+        <path
+          d="M11.2616 19.7897L11.2549 5.86644L4.92893 12.1924L3.86827 11.1317L12 3L20.1317 11.1317L19.0711 12.1924L12.7451 5.86643L12.7384 19.7897L11.2616 19.7897Z"
+          fill="black" />
+      </g>
+    </svg>
+  </button>
+</div>
 <footer>
   <div class="container footer-container">
       <div id="footer-copyright">
